[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Sprite/Menu_du_jeu.png" type="Texture" id=2]
[ext_resource path="res://serious_font.tres" type="Theme" id=3]
[ext_resource path="res://Fonts/kirifont/KiriFont.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Sounds/Musique Rover intro.wav" type="AudioStream" id=6]
[ext_resource path="res://Sounds/Bip_1.wav" type="AudioStream" id=7]
[ext_resource path="res://UI/playerInputInfo.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 20.0
margin_right = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="GameName" type="Label" parent="VBoxContainer"]
margin_right = 1330.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "1 ! 2 ! 3 ! Rover"
align = 1

[node name="HboxDescription" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 95.0
margin_right = 1330.0
margin_bottom = 428.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer2" type="Control" parent="VBoxContainer/HboxDescription"]
margin_right = 60.0
margin_bottom = 333.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="Description" type="Label" parent="VBoxContainer/HboxDescription"]
margin_left = 64.0
margin_right = 1265.0
margin_bottom = 333.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "La course à la Lune a pris un nouvel essor quand les Etats-Ensemble, l’Europie, la Republique de Chano entre autres ont commencé à se battre pour les ressources à sa surface. Aujourd’hui plusieurs rovers ont atterris sur la Lune et le premier qui plantera son drapeau sur le gisement de minerai rare le possédera. Les compétiteurs devront surveiller le Soleil car les radiations endommageront les rovers si ils ne sont pas éteints à temps…"
valign = 1
autowrap = true

[node name="Spacer" type="Control" parent="VBoxContainer/HboxDescription"]
margin_left = 1269.0
margin_right = 1330.0
margin_bottom = 333.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="ControlsInfo" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 458.0
margin_right = 1330.0
margin_bottom = 559.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 70
alignment = 1

[node name="Vbox" parent="VBoxContainer/ControlsInfo" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 280.0
margin_bottom = 101.0

[node name="Vbox2" parent="VBoxContainer/ControlsInfo" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 350.0
margin_right = 630.0
margin_bottom = 101.0

[node name="Vbox3" parent="VBoxContainer/ControlsInfo" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 700.0
margin_right = 980.0
margin_bottom = 101.0

[node name="Vbox4" parent="VBoxContainer/ControlsInfo" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1050.0
margin_right = 1330.0
margin_bottom = 101.0

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 589.0
margin_right = 1330.0
margin_bottom = 628.0
text = "Play"

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 658.0
margin_right = 1330.0
margin_bottom = 697.0
text = "Exit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0
autoplay = true

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -3.0

[node name="click_bis" type="AudioStreamPlayer" parent="."]
volume_db = -3.0

[connection signal="mouse_entered" from="VBoxContainer/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Play" to="." method="_on_Play_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
